--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = "4"
+clap = { version = "4", features = ["derive"] }
 rand = "0.8"
+num_cpus = "1"
+
+# Uncomment for profiling with cargo-flamegraph
+#[profile.release]
+#debug = true
