--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 clap = { version = "4", features = ["derive"] }
 rand = "0.8"
 num_cpus = "1"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 
 # Uncomment for profiling with cargo-flamegraph
 #[profile.release]
