--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,10 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4", features = ["derive"] }
-rand = "0.8"
 num_cpus = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+fastrand = "2"
 
 # Uncomment for profiling with cargo-flamegraph
 #[profile.release]
