--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 fastrand = "2"
 
+[workspace]
+members = ["function_drawer"]
+
 # Uncomment for profiling with cargo-flamegraph
 #[profile.release]
 #debug = true
