--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,8 @@ serde_json = "1"
 fastrand = "2"
 
 [workspace]
-members = ["function_drawer"]
+members = ["function_drawer", "stat_collector"]
 
 # Uncomment for profiling with cargo-flamegraph
-#[profile.release]
-#debug = true
+[profile.release]
+debug = true
