--- a/src/c/.vscode/settings.json
+++ b/src/c/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
     "C_Cpp.default.compileCommands": "/home/mundus/base/sem6/TIAD/zad1/pso_de/src/c/builddir/compile_commands.json",
-    "C_Cpp.default.configurationProvider": "mesonbuild.mesonbuild"
+    "C_Cpp.default.configurationProvider": "mesonbuild.mesonbuild",
+    "files.associations": {
+        "threads.h": "c"
+    }
 }
