--- a/src/c/meson.build
+++ b/src/c/meson.build
@@ -1,5 +1,6 @@
 project('differential_evolution', 'c')
 cc = meson.get_compiler('c')
 static_library('differential_evolution', [
-    'de.c'
+    'de.c',
+    'mtwister.c'
 ])
